fix: align items bar

--- a/frontend/src/pages/DonationList/CommonComponents/BottomMenu/BottomMenu.scss
+++ b/frontend/src/pages/DonationList/CommonComponents/BottomMenu/BottomMenu.scss
@@ -17,6 +17,10 @@
   ul {
     margin: 0;
     padding: 0;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    display: flex;
   }
 
   li {
